fix: display on mobile

--- a/css/dark.css
+++ b/css/dark.css
@@ -3,7 +3,6 @@
   --secondary-text-color: #47b431;
   --heading-text-color: #ff8a00;
   --accent-text-color: #ff8a00;
-  --border-color: #e9e9e9;
   --bg-color: #090909;
   --nav-hover-color: #1d9ca8;
   --link-color: #ff8a00;
