--- a/css/light.css
+++ b/css/light.css
@@ -3,7 +3,6 @@
   --secondary-text-color: #808080;
   --heading-text-color: #2c677e;
   --accent-text-color: #090909;
-  --border-color: #090909;
   --bg-color: #e9e9e9;
   --nav-hover-color: #6ba2bd;
   --link-color: #2c677e;
