--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,12 @@ h1 {
   font-size: 50px;
   margin: 0 0 30px;
   font-weight: 700;
-  @media (max-width: 760px) {
-    font-size: 28px;
-    margin: 0 0 10px;
-  }
 }
 
 h2 {
   font-size: 30px;
   color: var(--heading-text-color);
   margin-bottom: 16px;
-  @media (max-width: 760px) {
-    font-size: 22px;
-  }
 }
 
 h5 {
@@ -38,7 +31,7 @@ a:hover {
 
 ul:not([class]) {
   margin: 0;
-  padding-left: 30px;
+  padding-left: 15px;
 }
 
 .cv-page {
@@ -50,10 +43,6 @@ ul:not([class]) {
   font-family: Oxygen, Helvetica, sans-serif;
   font-size: 16px;
   color: var(--default-text-color);
-  @media (max-width: 760px) {
-    padding: 20px;
-    font-size: 14px;
-  }
 }
 
 .header {
@@ -64,9 +53,6 @@ ul:not([class]) {
 
 .header__left {
   margin-bottom: 50px;
-  @media (max-width: 760px) {
-    margin-bottom: 15px;
-  }
 }
 
 .header__theme-toggle {
@@ -85,18 +71,11 @@ ul:not([class]) {
 .header__theme-toggle svg {
   width: 80px;
   height: 80px;
-  @media (max-width: 760px) {
-    width: 50px;
-    height: 50px;
-  }
 }
 
 .heading__position {
   font-size: 35px;
   font-weight: 600;
-  @media (max-width: 760px) {
-    font-size: 20px;
-  }
 }
 
 .middle-block {
@@ -104,23 +83,12 @@ ul:not([class]) {
   grid-template-columns: 1fr 350px;
   column-gap: 20px;
   line-height: 1.7;
-
-  @media (max-width: 1200px) {
-    grid-template-columns: 1fr 250px;
-  }
-
-  @media (max-width: 1024px) {
-    grid-template-columns: 1fr;
-  }
 }
 
 .experience__step {
   display: grid;
   grid-template-columns: 230px 1fr;
   column-gap: 30px;
-  @media (max-width: 760px) {
-    display: block;
-  }
 }
 
 .experience__step:not(:first-of-type) {
@@ -130,6 +98,7 @@ ul:not([class]) {
 .experience__step-info-company {
   font-size: 20px;
   margin: 0 0 6px;
+  color: var(--default-text-color);
 }
 
 .experience__step-info-role {
@@ -152,16 +121,6 @@ ul:not([class]) {
   justify-content: space-between;
   position: relative;
   padding: 30px;
-  @media (max-width: 1024px) {
-    position: fixed;
-    bottom: 0;
-    right: 45px;
-    padding: 20px 40px;
-    flex-direction: row;
-    border: 2px solid var(--border-color);
-    transform: translateY(100%);
-    background-color: var(--bg-color);
-  }
 }
 
 .navbar {
@@ -201,4 +160,59 @@ ul:not([class]) {
   grid-template-rows: auto;
   column-gap: 30px;
   padding-left: 30px;
+}
+
+@media (max-width: 1200px) {
+  .middle-block {
+    max-width: 100%;
+    grid-template-columns: 1fr 250px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .cv-page {
+    width: auto;
+  }
+  .middle-block {
+    grid-template-columns: 1fr;
+  }
+  .list--compact {
+    column-gap: 10px;
+  }
+  .aside-right {
+    padding: 30px 0;
+  }
+  .navbar {
+    display: none;
+  }
+}
+
+@media (max-width: 760px) {
+  h1 {
+    font-size: 28px;
+    margin: 0 0 10px;
+  }
+  h2 {
+    font-size: 22px;
+  }
+  .cv-page {
+    padding: 20px;
+    font-size: 14px;
+  }
+  .header__left {
+    margin-bottom: 15px;
+  }
+  .header__theme-toggle svg {
+    width: 50px;
+    height: 50px;
+  }
+  .heading__position {
+    font-size: 20px;
+  }
+  .experience__step {
+    display: block;
+  }
+  .project__title {
+    font-size: 16px;
+  }
 }
